samples/_failures_safe/1761634786_85071c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1516679.c: In function ‘main’:
./samples/SAFE/__tmp_e1516679.c:166:35: error: expected ‘)’ at end of input
  166 |     free_buffer(&compressed_buffer
      |                ~                  ^
      |                                   )
./samples/SAFE/__tmp_e1516679.c:166:5: error: expected declaration or statement at end of input
  166 |     free_buffer(&compressed_buffer
      |     ^~~~~~~~~~~
